OpenZXRom 2007-10-15
- calc_pop_bc and calc_pop_a now handle floating point values
- RPN calculator mode put in place ('calc' @ 0x0028), although only a limited
  number of commands are supported at present
- Expression parser (was 'get_num_expr', now 'get_expr') extended to work with
  both string and numeric expressions
- PEEK and IN functions implemented ('func_peek' / 'func_in')
- POKE and OUT commands implemented ('cmd_poke' / 'cmd_out')
- USR (numeric) function implemeted ('func_usr')
- PLOT command implemented ('cmd_plot', plus entry points 'pixel_addr'
  and 'plot_bc')
- Changed system font to Clairsys by Paul van der Laan
  <http://www.type-invaders.com/>
- Source now split into multiple files for easier maintenance

OpenZXRom 2006-06-18
- Basic interpreter core ('interp')
- Numeric expression parsing ('get_num_expr'); can process nearly all syntax
  (with the sole exception of string comparisons), although only literal
  numerics can actually be evaluated at the moment
- Rudimentary calculator stack operations ('calc_pop_aedcb' @ 0x2bf1,
  'calc_pop_a' @ 0x2dd5)
- INK and PAPER commands implemented ('cmd_ink' / 'cmd_paper')
- BORDER command implemented ('cmd_border')
- NEW command implemented ('cmd_new')
- CLS command implemented ('cmd_cls')
- REM command implemented ('cmd_rem')
- GO TO command implemented ('cmd_goto')
- RUN command implemented ('cmd_run')
- STOP command implemented ('cmd_stop')
- RANDOMIZE command implemented ('cmd_randomize')
- CLEAR command implemented ('cmd_clear')
- Auto-running programs on LOAD
- Error reporting framework ('error' @ 0x0008)
- System variables vars_addr, calc_stack_end (was spare_mem_addr) moved to
  correct ZX ROM compatible locations

OpenZXRom 2006-06-03
- Tape loading (0x0556)
- Slightly redesigned splash screen, and moved to separate file for easier
  version number bumping

OpenZXRom 2006-05-17
- Key scanning routine (0x028e)
- IM1 interrupt service routine updates FRAMES system variable