@@ -69,6 +69,7 @@ BASIC commands supported
 	BORDER
 	REM
 	GO TO
+	LOAD (CODE only)
 	POKE
 	PLOT
 	RUN
@@ -78,8 +79,8 @@ BASIC commands supported
 BASIC commands not supported:
 	DEF FN, CAT, FORMAT, MOVE, ERASE, OPEN #, CLOSE #, MERGE, VERIFY, BEEP, CIRCLE,
 	FLASH, BRIGHT, INVERSE, OVER, LPRINT, LLIST, READ, DATA, RESTORE, CONTINUE,
-	DIM, FOR, GO SUB, INPUT, LOAD, LIST, LET, PAUSE, NEXT, PRINT, SAVE, IF, DRAW,
-	RETURN, COPY
+	DIM, FOR, GO SUB, INPUT, LIST, LET, PAUSE, NEXT, PRINT, SAVE, IF, DRAW, RETURN,
+	COPY
 	
 Expression support
 ------------------
